--- a/administradores/src/componentes/dashboard/dashboard.html
+++ b/administradores/src/componentes/dashboard/dashboard.html
@@ -95,6 +95,12 @@
                 Categorías
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/usuarios" routerLinkActive="active">
+                <i class="bi bi-people me-2"></i>
+                Usuarios
+              </a>
+            </li>
           </ul>
           
           <!-- Reportes -->
@@ -349,6 +355,40 @@
               </div>
             </div>
           </div>
+
+          <!-- Usuarios -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-secondary border-3 border-start border-0 shadow-sm h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col me-2">
+                    <div class="text-xs fw-bold text-secondary text-uppercase mb-1">
+                      Usuarios
+                    </div>
+                    <div class="h5 mb-0 fw-bold text-gray-800">{{summaryCards[5]?.count || 0}}</div>
+                    <div class="mt-2">
+                      <span class="badge" [ngClass]="getChangeBadgeClass(summaryCards[5]?.change || 0)">
+                        <i class="bi" [class]="'bi-' + getChangeIcon(summaryCards[5]?.change || 0) + ' me-1'"></i> 
+                        {{summaryCards[5]?.change || 0}}%
+                      </span>
+                      <small class="text-muted ms-2">vs mes pasado</small>
+                    </div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="bi bi-people fs-1 text-secondary opacity-75"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer bg-transparent border-0 py-2 d-flex justify-content-between">
+                <button class="btn btn-sm btn-secondary" (click)="onAddClick('Usuarios')">
+                  <i class="bi bi-plus-circle me-1"></i> Añadir
+                </button>
+                <button class="btn btn-sm btn-outline-secondary" (click)="onListClick('Usuarios')">
+                  <i class="bi bi-list me-1"></i> Lista
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Mensaje informativo -->
@@ -404,7 +444,7 @@
         <h4 class="mb-3">Inicio de sesión exitoso</h4>
         <p class="text-muted">
           Has accedido al panel de administración del Sistema Turístico como <strong>{{currentUser?.nombre || 'Administrador'}}</strong>.
-          Desde aquí puedes gestionar regiones, provincias, ciudades, hoteles y categorías.
+          Desde aquí puedes gestionar regiones, provincias, ciudades, hoteles, categorías y usuarios.
         </p>
       </div>
       <div class="modal-footer justify-content-center">
